--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,14 @@ pin-project-lite = "0.2"
 
 # subxt
 subxt = { version = "0.32.1", features = ["substrate-compat"] }
-scale-value = "0.13.0"
+scale-value = "0.12.0"
 
 # polkadot-sdk
-frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk" }
-pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk/" }
-frame-support = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk" }
+frame-election-provider-support = "26.0.0"
+pallet-election-provider-multi-phase = "25.0.0"
+sp-npos-elections = "24.0.0"
+frame-support = "26.0.0"
+sp-runtime = "29.0.0"
 
 # prometheus
 prometheus = "0.13"
@@ -37,7 +37,7 @@ once_cell = "1.18"
 [dev-dependencies]
 anyhow = "1"
 assert_cmd = "2.0"
-sp-storage = { git = "https://github.com/paritytech/polkadot-sdk" }
+sp-storage = "17.0.0"
 regex = "1"
 
 [features]
