--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ codec = { package = "parity-scale-codec", version = "3.0.0" }
 scale-info = { package = "scale-info", version = "2.10.0" }
 clap = { version = "4.4", features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-jsonrpsee = { version = "0.16", features = ["ws-client"] }
+jsonrpsee = { version = "0.20", features = ["ws-client"] }
 log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
@@ -19,15 +19,15 @@ tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = "0.29"
-scale-value = "0.10.0"
+subxt = { version = "0.32.1", features = ["substrate-compat"] }
+scale-value = "0.12.0"
 
 # polkadot-sdk
-frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk" }
-pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk/" }
-frame-support = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk" }
+frame-election-provider-support = "26.0.0"
+pallet-election-provider-multi-phase = "25.0.0"
+sp-npos-elections = "24.0.0"
+frame-support = "26.0.0"
+sp-runtime = "29.0.0"
 
 # prometheus
 prometheus = "0.13"
@@ -37,10 +37,9 @@ once_cell = "1.18"
 [dev-dependencies]
 anyhow = "1"
 assert_cmd = "2.0"
-sp-storage = { git = "https://github.com/paritytech/polkadot-sdk" }
+sp-storage = "17.0.0"
 regex = "1"
 
 [features]
 default = []
 slow-tests = []
-staking-miner-playground-tests = []
